Edited Bootstrap Location

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="x-ua-compatible" content="IE=edge">
 		<title>Phone Recommender</title>
 		<!-- Bootstrap CSS-->
-		<link rel="stylesheet" type="text/css" href="C:\Users\AJIBS\Desktop\Apps\bootstrap-3.3.7-dist\css\bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/styles.css">
 		<!-- Google fonts -->
